tests/errors/ReadUndeclaredArrayIndex.imp
VAR
  a[42]
BEGIN
  READ a[b];
END
